refactor by using utility py script

--- a/models/optimization_model.ipynb
+++ b/models/optimization_model.ipynb
@@ -17,272 +17,14 @@
     "import pandas as pd\n",
     "import itertools\n",
     "from scipy.stats import dirichlet\n",
-    "import import_ipynb\n",
-    "from team_model import predict_fixtures, import_fixture_lists, import_fixture_list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 135,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# create form matrix\n",
-    "def find_form(fixtures_list):\n",
-    "    \n",
-    "    N = np.shape(fixtures_list)[0]\n",
-    "    goals_ht = fixtures_list[:, 2]\n",
-    "    goals_at = fixtures_list[:, 3]\n",
-    "    teams_ht = fixtures_list[:, 0]\n",
-    "    teams_at = fixtures_list[:, 1]\n",
-    "    \n",
-    "    teams_for_season = np.unique(teams_ht)\n",
-    "    \n",
-    "    points = np.zeros((38, 20))\n",
-    "    team_count = np.zeros(20)\n",
-    "    for i in range(N):\n",
-    "        points[team_count[np.where(teams_for_season == teams_ht[i])[0][0].astype(int)].astype(int), np.where(teams_for_season == teams_ht[i])[0][0].astype(int)] = (3 * (goals_ht[i] > goals_at[i])) + (goals_ht[i] == goals_at[i])\n",
-    "        points[team_count[np.where(teams_for_season == teams_at[i])[0][0].astype(int)].astype(int), np.where(teams_for_season == teams_at[i])[0][0].astype(int)] = (3 * (goals_ht[i] < goals_at[i])) + (goals_ht[i] == goals_at[i])\n",
-    "        team_count[np.where(teams_for_season == teams_ht[i])[0][0].astype(int)] += 1\n",
-    "        team_count[np.where(teams_for_season == teams_at[i])[0][0].astype(int)] += 1\n",
-    "    form = np.ones((38, 20)) * 7.5\n",
-    "    for j in range(20):\n",
-    "        form[5:, j] = np.cumsum(points[:, j])[5:] - np.cumsum(points[:, j])[:(38 - 5)]\n",
-    "    \n",
-    "    team_count = np.zeros(20)\n",
-    "    mat_form = np.zeros((N, 2))\n",
-    "    for i in range(N):\n",
-    "        ind_ht = np.where(teams == teams_ht[i])[0][0].astype(int)\n",
-    "        ind_at = np.where(teams == teams_at[i])[0][0].astype(int)\n",
-    "        ind_for_season_ht = np.where(teams_for_season == teams_ht[i])[0][0].astype(int)\n",
-    "        ind_for_season_at = np.where(teams_for_season == teams_at[i])[0][0].astype(int)\n",
-    "        mat_form[i, 0] = form[team_count[ind_for_season_ht].astype(int), ind_for_season_ht]\n",
-    "        mat_form[i, 1] = form[team_count[ind_for_season_at].astype(int), ind_for_season_at]\n",
-    "        team_count[np.where(teams_for_season == teams_ht[i])[0][0].astype(int)] += 1\n",
-    "        team_count[np.where(teams_for_season == teams_at[i])[0][0].astype(int)] += 1\n",
-    "    \n",
-    "    return(teams_for_season, mat_form)"
+    "%run -i utils.py"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Optimization of players"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Probability functions of points scoring"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 151,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def sample_clean_sheet_for_team(lambda_2):\n",
-    "    return(np.random.poisson(lambda_2) == 0)\n",
-    "\n",
-    "def sample_mins_played(a, b, a_games, b_games, starting=None):\n",
-    "    if starting == None:\n",
-    "        return(np.random.choice([1, 0], 1, p=np.random.dirichlet([a_games, b_games]))[0] * np.min([np.random.poisson(np.random.gamma(a, 1 / b)), 90]))\n",
-    "    elif starting == True:\n",
-    "        return(np.min([np.random.poisson(np.random.gamma(a, 1 / b)), 90]))\n",
-    "    elif starting == False:\n",
-    "        return(0)\n",
-    "\n",
-    "def sample_goals_and_assists(a, b, c, n, mins_played):\n",
-    "    t_goals = np.random.uniform(0, 90, n)  # times of goals\n",
-    "    n_goals = np.sum(t_goals <= mins_played)\n",
-    "    d = np.random.dirichlet(np.array([a, b, c]))  # sample hyperparameters\n",
-    "    if (n_goals > 0):\n",
-    "        samples = np.random.choice(np.array([0, 1, 2]), n_goals, p=d)\n",
-    "        return(sum(samples == 0), sum(samples == 1))\n",
-    "    else:\n",
-    "        return(0, 0)\n",
-    "\n",
-    "def sample_clean_sheet_points(goals_conceded, mins_played):\n",
-    "    return(int(mins_played > 60) * int(goals_conceded == 0))\n",
-    "\n",
-    "def sample_mins_points(mins_played):\n",
-    "    return(int(mins_played > 60) + int(mins_played >= 1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 137,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_players(all_players_params, team_sel):\n",
-    "    ind = all_players_params.index[all_players_params['team'] == team_sel]\n",
-    "    return(ind)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 138,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def ComputeExpectedPoints(fixtures_list, teams, all_players_params, all_teams_params,\n",
-    "                          zerooutbottom=0, Niter=250, additionalstats=False, form=None):\n",
-    "    \n",
-    "    # param data sets are pd Data Frames\n",
-    "    \n",
-    "    # Without bonus for now and goals conceded points\n",
-    "    \n",
-    "    # preallocate points for each iteration\n",
-    "    points = np.zeros((Niter, len(all_players_params.index)))\n",
-    "    clean_sheets = np.zeros((Niter, len(all_players_params.index)))\n",
-    "    goals_scored = np.zeros((Niter, len(all_players_params.index)))\n",
-    "    mplayed = np.zeros((Niter, len(all_players_params.index)))\n",
-    "\n",
-    "    # mean and std of team hyperparameters\n",
-    "    mu = (all_teams_params.as_matrix())[0, :]\n",
-    "    a = (all_teams_params.as_matrix())[1:(len(teams) + 1), :]\n",
-    "    d = (all_teams_params.as_matrix())[(len(teams) + 1):((2 * len(teams)) + 1), :]\n",
-    "    alpha = (all_teams_params.as_matrix())[((2 * len(teams)) + 1), :]\n",
-    "\n",
-    "    for l in range(Niter):\n",
-    "        \n",
-    "        # preallocate form array\n",
-    "        team_points = np.zeros((38, len(teams)))\n",
-    "        team_counter = np.zeros(len(teams))\n",
-    "        \n",
-    "        for i in range(np.shape(fixtures_list)[0]):\n",
-    "            \n",
-    "            # find teams for each fixture\n",
-    "            h_team = fixtures_list[i, 0]\n",
-    "            a_team = fixtures_list[i, 1]\n",
-    "            \n",
-    "            # compute form\n",
-    "            if hasattr(form, '__len__'):\n",
-    "                form_h = form[i, 0]\n",
-    "                form_a = form[i, 1]\n",
-    "            else:\n",
-    "                if team_counter[np.where(h_team == teams)[0][0]] > 5:\n",
-    "                    form_h = (np.cumsum(team_points[:, int(np.where(h_team == teams)[0][0])])[5:] - np.cumsum(team_points[:, int(np.where(h_team == teams)[0][0])])[:(38 - 5)])[int(team_counter[np.where(h_team == teams)[0][0]] - 1 - 5)]\n",
-    "                else:\n",
-    "                    form_h = 7.5\n",
-    "                if team_counter[np.where(a_team == teams)[0][0]] > 5:\n",
-    "                    form_a = (np.cumsum(team_points[:, int(np.where(a_team == teams)[0][0])])[5:] - np.cumsum(team_points[:, int(np.where(a_team == teams)[0][0])])[:(38 - 5)])[int(team_counter[np.where(a_team == teams)[0][0]] - 1 - 5)]\n",
-    "                else:\n",
-    "                    form_a = 7.5\n",
-    "            \n",
-    "            # sample lambdas for team performance - sample from team hyperparameters\n",
-    "            lambdas = predict_fixtures(np.reshape(fixtures_list[i, :2], ((1, 2))),\n",
-    "                                       np.reshape(np.array([form_h, form_a]), ((1, 2))),\n",
-    "                                       teams, mu, a, d, alpha, uncertainty=True)\n",
-    "            \n",
-    "            # sample score\n",
-    "            h_n = np.random.poisson(lambdas[0][0])\n",
-    "            a_n = np.random.poisson(lambdas[1][0])\n",
-    "            \n",
-    "            # compute incremental team points\n",
-    "            team_points[int(team_counter[np.where(h_team == teams)[0][0]]),\n",
-    "                        int(np.where(h_team == teams)[0][0])] += (3 * (h_n > a_n)) + (h_n == a_n)\n",
-    "            team_points[int(team_counter[np.where(a_team == teams)[0][0]]),\n",
-    "                        int(np.where(a_team == teams)[0][0])] += (3 * (h_n < a_n)) + (h_n == a_n)\n",
-    "            \n",
-    "            team_counter[np.where(h_team == teams)[0][0]] += 1\n",
-    "            team_counter[np.where(a_team == teams)[0][0]] += 1\n",
-    "            \n",
-    "            # find all players in these teams\n",
-    "            h_players = get_players(all_players_params, h_team)\n",
-    "            a_players = get_players(all_players_params, a_team)\n",
-    "            \n",
-    "            # loop over players\n",
-    "            for j in range(len(h_players)):\n",
-    "                \n",
-    "                # predefine scalings for points\n",
-    "                if all_players_params.loc[all_players_params.index[h_players[j]], 'position'] == \"GKP\":\n",
-    "                    scaling = np.array([6., 3., 4.])\n",
-    "                if all_players_params.loc[all_players_params.index[h_players[j]], 'position'] == \"DEF\":\n",
-    "                    scaling = np.array([6., 3., 4.])\n",
-    "                if all_players_params.loc[all_players_params.index[h_players[j]], 'position'] == \"MID\":\n",
-    "                    scaling = np.array([5., 3., 1.])\n",
-    "                if all_players_params.loc[all_players_params.index[h_players[j]], 'position'] == \"FWD\":\n",
-    "                    scaling = np.array([4., 3., 0.])\n",
-    "                \n",
-    "                # sample mins played\n",
-    "                mins_played = sample_mins_played(all_players_params.loc[all_players_params.index[h_players[j]], 'a_mins'],\n",
-    "                                                 all_players_params.loc[all_players_params.index[h_players[j]], 'b_mins'],\n",
-    "                                                 all_players_params.loc[all_players_params.index[h_players[j]], 'a_games'],\n",
-    "                                                 all_players_params.loc[all_players_params.index[h_players[j]], 'b_games'])\n",
-    "                \n",
-    "                goa, assi = sample_goals_and_assists(all_players_params.loc[all_players_params.index[h_players[j]], 'a_goals'],\n",
-    "                                                         all_players_params.loc[all_players_params.index[h_players[j]], 'b_goals'],\n",
-    "                                                         all_players_params.loc[all_players_params.index[h_players[j]], 'c_goals'],\n",
-    "                                                         h_n, mins_played)\n",
-    "                points[l, h_players[j]] += ((goa * scaling[0]) + (assi * scaling[1]))  # goals and assists\n",
-    "                csp = sample_clean_sheet_points(a_n, mins_played)\n",
-    "                points[l, h_players[j]] += ((scaling[2] * csp) +\n",
-    "                                            (sample_mins_points(mins_played)))\n",
-    "                clean_sheets[l, h_players[j]] += csp\n",
-    "                goals_scored[l, h_players[j]] += goa\n",
-    "                mplayed[l, h_players[j]] += mins_played\n",
-    "            \n",
-    "            for j in range(len(a_players)):\n",
-    "                \n",
-    "                # predefine scalings for points\n",
-    "                if all_players_params.loc[all_players_params.index[a_players[j]], 'position'] == \"GKP\":\n",
-    "                    scaling = np.array([6., 3., 4.])\n",
-    "                if all_players_params.loc[all_players_params.index[a_players[j]], 'position'] == \"DEF\":\n",
-    "                    scaling = np.array([6., 3., 4.])\n",
-    "                if all_players_params.loc[all_players_params.index[a_players[j]], 'position'] == \"MID\":\n",
-    "                    scaling = np.array([5., 3., 1.])\n",
-    "                if all_players_params.loc[all_players_params.index[a_players[j]], 'position'] == \"FWD\":\n",
-    "                    scaling = np.array([4., 3., 0.])\n",
-    "                \n",
-    "                # sample mins played\n",
-    "                mins_played = sample_mins_played(all_players_params.loc[all_players_params.index[a_players[j]], 'a_mins'],\n",
-    "                                                 all_players_params.loc[all_players_params.index[a_players[j]], 'b_mins'],\n",
-    "                                                 all_players_params.loc[all_players_params.index[a_players[j]], 'a_games'],\n",
-    "                                                 all_players_params.loc[all_players_params.index[a_players[j]], 'b_games'])\n",
-    "                \n",
-    "                goa, assi = sample_goals_and_assists(all_players_params.loc[all_players_params.index[a_players[j]], 'a_goals'],\n",
-    "                                                         all_players_params.loc[all_players_params.index[a_players[j]], 'b_goals'],\n",
-    "                                                         all_players_params.loc[all_players_params.index[a_players[j]], 'c_goals'],\n",
-    "                                                         a_n, mins_played)\n",
-    "                points[l, a_players[j]] += ((goa * scaling[0]) + (assi * scaling[1]))  # goals and assists\n",
-    "                csp = sample_clean_sheet_points(h_n, mins_played)\n",
-    "                points[l, a_players[j]] += ((scaling[2] * csp) +\n",
-    "                                            (sample_mins_points(mins_played)))\n",
-    "                clean_sheets[l, a_players[j]] += csp\n",
-    "                goals_scored[l, a_players[j]] += goa\n",
-    "                mplayed[l, a_players[j]] += mins_played\n",
-    "\n",
-    "        print('---')\n",
-    "        print('Realisation ', l)\n",
-    "        print('Top Points Scorers: ', all_players_params.loc[all_players_params.index[np.argsort(points[l, :])[-5:].astype(int)], 'player'],\n",
-    "              ' with ', np.sort(points[l, :])[-5:], ' points')\n",
-    "\n",
-    "    if zerooutbottom > 0:\n",
-    "        for l in range(Niter):\n",
-    "            points[l, np.argsort(points[l, :])[:zerooutbottom]] = 0  # to account for bench players when simulating team performance\n",
-    "\n",
-    "    expected_points = np.mean(points, axis=0)\n",
-    "    sd_points = np.std(points, axis=0)\n",
-    "    cs = np.mean(clean_sheets, axis=0)\n",
-    "    gs = np.mean(goals_scored, axis=0)\n",
-    "    mp = np.mean(mplayed, axis=0)\n",
-    "\n",
-    "    if additionalstats:\n",
-    "        return(expected_points, sd_points, cs, gs, mp)\n",
-    "    else:\n",
-    "        return(expected_points, sd_points)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Historical fitting"
+    "### Optimization of players over any fixtures"
    ]
   },
   {
@@ -26282,7 +26024,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Team predictions"
+    "### Team of players predictions"
    ]
   },
   {
@@ -26388,19 +26130,6 @@
     "print('expected team score: ', expected_tm_score)\n",
     "print('lower 95% confidence team score: ', max(0, expected_tm_score - (2 * sd_tm_score)))\n",
     "print('upper 95% confidence team score: ', expected_tm_score + (2 * sd_tm_score))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# calculates match probability\n",
-    "def match_prob(exp_p1, sd_p1, exp_p2, sd_p2):\n",
-    "    exp_diff = exp_p1 - exp_p2\n",
-    "    sd_diff = np.sqrt((sd_p1 ** 2) + (sd_p2 ** 2))\n",
-    "    return(1 - norm.cdf(0, exp_diff, sd_diff))"
    ]
   },
   {
