added in fixture getting

--- a/models/optimization_model.ipynb
+++ b/models/optimization_model.ipynb
@@ -8,6 +8,7 @@
    "source": [
     "import os\n",
     "import csv\n",
+    "import sys\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plot\n",
     "from scipy.stats import poisson\n",
@@ -18,7 +19,9 @@
     "import itertools\n",
     "from scipy.stats import dirichlet\n",
     "%run -i utils.py\n",
-    "%run -i ../get_team_api.py"
+    "\n",
+    "sys.path.insert(0, '../')\n",
+    "import get_team_api"
    ]
   },
   {
@@ -34,8 +37,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "form = np.ones((380, 2)) * 7.5\n",
-    "\n",
     "all_players_params = pd.read_csv(\"../parameters/all_players_params.csv\")\n",
     "all_teams_params = pd.read_csv(\"../parameters/all_teams_params.csv\", header=None)\n",
     "teams = pd.read_csv(\"../parameters/all_teams.csv\", header=None).values[:, 0]"
@@ -102,7 +103,7 @@
    "outputs": [],
    "source": [
     "# save to csv\n",
-    "frame = all_players_params.loc[all_players_params.index[all_players_params['last_season'] == 3], :]\n",
+    "frame = all_players_params\n",
     "frameref = frame[['player', 'position', 'team', 'Expected Points 2019/2020',\n",
     "                  'Std Points 2019/2020', 'Lower 95% Confidence Points 2019/2020',\n",
     "                  'Upper 95% Confidence Points 2019/2020', 'Expected Goals 2019/2020', 'Expected Clean Sheets 2019/2020',\n",
@@ -336,11 +337,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# players for a specific team\n",
-    "team_ids = []\n",
+    "# players for all teams in league\n",
     "league_id = \"\"\n",
     "gw = 1\n",
     "users = []\n",
+    "team_ids = getTeam(league_id, gw)[1]\n",
     "\n",
     "tm_exp = np.zeros(len(team_ids))\n",
     "tm_std = np.zeros(len(team_ids))\n",
