removed form coeff

--- a/models/optimization_model.ipynb
+++ b/models/optimization_model.ipynb
@@ -19,9 +19,9 @@
     "import itertools\n",
     "from scipy.stats import dirichlet\n",
     "%run -i utils.py\n",
-    "\n",
     "sys.path.insert(0, '../')\n",
-    "import get_team_api"
+    "from get_team_api import *\n",
+    "from get_api import *"
    ]
   },
   {
@@ -52,20 +52,6 @@
    "source": [
     "# fixture list this season to predict\n",
     "fixture_list_this_season = (pd.read_csv(\"../data/prem_results_20192020.csv\", header=None)).values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# small fixture list - use for optimization for any particular gameweek\n",
-    "#fixture_list_this_season = (pd.read_csv(\"prem_results_20182019.csv\", header=None).as_matrix())[:10, :]\n",
-    "#print(fixture_list_this_season)\n",
-    "\n",
-    "#type in current form here\n",
-    "#form=...."
    ]
   },
   {
@@ -185,8 +171,6 @@
    "source": [
     "# create fixture list this season to predict\n",
     "fixture_list_last_season = pd.read_csv(\"../data/prem_results_20182019.csv\", header=None).values\n",
-    "\n",
-    "teams_this_season, form = find_form(fixture_list_last_season)\n",
     "\n",
     "all_players_params = pd.read_csv(\"../parameters/all_players_params.csv\")\n",
     "all_teams_params = pd.read_csv(\"../parameters/all_teams_params.csv\", header=None)\n",
@@ -325,10 +309,8 @@
    "outputs": [],
    "source": [
     "# this gameweek fixtures\n",
-    "fixture_list_this_gw = (pd.read_csv(\"../data/prem_results_20192020.csv\", header=None).values)[:10, :]\n",
-    "\n",
-    "# this gameweek form for each fixture\n",
-    "#form =..."
+    "gw = 1\n",
+    "fixture_list_this_gw = getFixtures(gw, team_id_file=\"../data/team_id_20192020.csv\")"
    ]
   },
   {
@@ -339,7 +321,6 @@
    "source": [
     "# players for all teams in league\n",
     "league_id = \"\"\n",
-    "gw = 1\n",
     "users = []\n",
     "team_ids = getTeam(league_id, gw)[1]\n",
     "\n",
@@ -359,7 +340,7 @@
     "    new_players_frame = new_players_frame.reset_index()\n",
     "    Niter = 250\n",
     "    C, S = ComputeExpectedPoints(fixture_list_this_gw, teams, new_players_frame, all_teams_params,\n",
-    "                                 zerooutbottom=3, Niter=Niter)#, form=form)  # zero out bench players\n",
+    "                                 zerooutbottom=3, Niter=Niter)\n",
     "    \n",
     "    tm_exp[j] = np.sum(C)\n",
     "    tm_std[j] = np.sqrt(np.sum(S ** 2))"
