--- a/models/team_model.ipynb
+++ b/models/team_model.ipynb
@@ -80,8 +80,7 @@
     "a = np.ones(len(teams)) * 0.1\n",
     "d = np.ones(len(teams)) * 0.1\n",
     "mu = 0.1\n",
-    "alpha = 0.1\n",
-    "l = likelihood_season(fl1, teams, mu, a, d, alpha)"
+    "l = likelihood_season(fl1, teams, mu, a, d)"
    ]
   },
   {
@@ -91,7 +90,7 @@
    "outputs": [],
    "source": [
     "# test\n",
-    "predict_fixtures(fl1[1:3, :], np.array([[3, 3], [3, 3]]), teams, mu, a, d, alpha)"
+    "predict_fixtures(fl1[1:3, :], teams, mu, a, d)"
    ]
   },
   {
@@ -150,10 +149,8 @@
     "a_sd = np.std(est[burn:, 1:(len(teams) + 1)], axis=0)\n",
     "d_mean = np.mean(est[burn:, (len(teams) + 1):((2 * len(teams)) + 1)], axis=0)\n",
     "d_sd = np.std(est[burn:, (len(teams) + 1):((2 * len(teams)) + 1)], axis=0)\n",
-    "alpha_mean = np.array([np.mean(est[burn:, ((2 * len(teams)) + 1)])])\n",
-    "alpha_sd = np.array([np.std(est[burn:, ((2 * len(teams)) + 1)])])\n",
-    "means = np.concatenate((mu_mean, a_mean, d_mean, alpha_mean))\n",
-    "sds = np.concatenate((mu_sd, a_sd, d_sd, alpha_sd))\n",
+    "means = np.concatenate((mu_mean, a_mean, d_mean))\n",
+    "sds = np.concatenate((mu_sd, a_sd, d_sd))\n",
     "\n",
     "sds[1 + inds] = 0.1\n",
     "sds[1 + len(teams) + inds] = 0.1\n",
@@ -166,7 +163,7 @@
     "\n",
     "with open('../parameters/all_teams_params.csv', mode='w', newline='') as csv_file:\n",
     "    csv_writer = csv.writer(csv_file, delimiter=',')\n",
-    "    for i in range(((2 * len(teams)) + 2)):\n",
+    "    for i in range(((2 * len(teams)) + 1)):\n",
     "        csv_writer.writerow([means[i], sds[i]])\n",
     "csv_file.close()"
    ]
@@ -184,6 +181,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "fixture_list_this_season = pd.read_csv(\"../data/prem_results_20192020.csv\").values\n",
+    "\n",
     "wins = np.zeros(20)\n",
     "topfour = np.zeros(20)\n",
     "niter = 1000\n",
@@ -194,7 +193,6 @@
     "                  np.reshape(sds[1:(1+len(teams))], ((len(teams), 1)))))\n",
     "dest = np.hstack((np.reshape(means[(1+len(teams)):(1+(2*len(teams)))], ((len(teams), 1))),\n",
     "                  np.reshape(sds[(1+len(teams)):(1+(2*len(teams)))], ((len(teams), 1)))))\n",
-    "alphaest = np.hstack((means[((2 * len(teams)) + 1)], sds[((2 * len(teams)) + 1)]))\n",
     "\n",
     "for j in range(niter):\n",
     "    # work out total goals predicted\n",
@@ -203,7 +201,7 @@
     "    total_goals_conceded = np.zeros(20)\n",
     "    #actual_goals_conceded = np.zeros(20)\n",
     "    tms = np.unique(fixture_list_this_season[:, 0])\n",
-    "    goals_this_season = predict_fixtures(fixture_list_this_season, np.ones((380, 2)) * 5, teams, muest, aest, dest, alphaest, uncertainty=True)\n",
+    "    goals_this_season = predict_fixtures(fixture_list_this_season, teams, muest, aest, dest, uncertainty=True)\n",
     "    pnts = np.zeros(20)\n",
     "    for i in range(np.shape(fixture_list_this_season)[0]):\n",
     "        goals_ht = np.random.poisson(goals_this_season[0][i])\n",
